--- a/index.ipynb
+++ b/index.ipynb
@@ -2068,13 +2068,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(203, 630, 230)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "area_values = cities[0]['Area'], cities[1]['Area'], cities[2]['Area']\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [area_values], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
+    "area_values"
    ]
   },
   {
